--- a/src/Style/login.css
+++ b/src/Style/login.css
@@ -16,8 +16,8 @@ body{
     display: flex;
     align-items: center;
     padding: 30px;
-    width: 500px;
-    height: 690px;
+    width: 650px;
+    height: 890px;
     top: -19px;
     border: 0 0.8219442963600159 0 0;
     background: #0C1E33;
@@ -30,6 +30,7 @@ body{
 }
 .form-wrapper{
     gap: 5px;
+    margin-left: 140px;
     display: flex;
     flex-direction: column;
     align-items: center;
